# apron-node

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/apron-ocw/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: Dockerfile  docker-compose-base.yml  docker-compose.yml  docker.md  insert_alice_key.sh
